// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time adds additional class name if supplied 1`] = `
<time
  className="this-classes were-added"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Mar 22, 1991
</time>
`;

exports[`Time renders with custom tooltip when supplied 1`] = `
<time
  className="reactist time"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Tooltip
    allowVaguePositioning={false}
    delayHide={0}
    delayShow={500}
    hideOnScroll={true}
    inverted={false}
    position="auto"
    text="Test"
  >
    Mar 22, 1991
  </Tooltip>
</time>
`;

exports[`Time renders without crashing 1`] = `
<time
  className="reactist time"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  moments ago
</time>
`;

exports[`Time renders wrapped in tooltip when tooltipOnHover is set 1`] = `
<time
  className="reactist time"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Tooltip
    allowVaguePositioning={false}
    delayHide={0}
    delayShow={500}
    hideOnScroll={true}
    inverted={false}
    position="auto"
    text="22 Mar 91, 1:37 PM"
  >
    Mar 22, 1991
  </Tooltip>
</time>
`;
